--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,15 @@
 <resources>
     
     <string name="app_name">Synergy</string>
+
+    <string name="Str_clientNameTextView">Nombre del cliente:</string>
+    <string name="Str_serverHostTextView">IP/Hostname del servidor:</string>
+    <string name="Str_serverPortTextView">Puerto:</string>
+    <string name="Str_inputDeviceTextView">Nombre del dispositivo de entrada:</string>
+    <string name="Str_connectButton">Conectar</string>
+    <string name="Str_disconnectButton">Desconectar</string>
+    <string name="Str_outputEditTextView">Debug:</string>
+    
+
+    
 </resources>
