* Se cambió el estilo visual por el de Light. * Reorganizado el activity principal. * Nuevo checkbox, que activa y desactiva el debug. * Se muestra el debug, en un multiline en el activity.
----------------------------------------------------------------------------

* Visual style is changed to Light.
* I reorganized the main activity.
* New checkbox that enables and disables debug.
* Debug is displayed in a multiline in the activity.

--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -7,5 +7,6 @@
     <string name="Str_outputEditTextView">Debug:</string>
     <string name="Str_serverHostTextView">Server IP/Hostname:</string>
     <string name="Str_serverPortTextView">Server Port:</string>
+    <string name="Str_debug_checkbox">Enable debug</string>
 
 </resources>
